2008-12-02  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_env/pam_env.c: Add support for user specific
	environment file. Based on a patch from Ubuntu.
	* modules/pam_env/pam_env.8.xml: Document new options.

2008-12-02  Olivier Fourdan <ofourdan@redhat.com>

	* modules/pam_filter/pam_filter.c (master): Use /dev/ptmx
	instead of the old BSD pseudoterminal API.
	(set_filter): Call grantpt(), unlockpt() and ptsname(). Do not
	close pseudoterminal handle in filter child.
	* modules/pam_filter/upperLOWER/upperLOWER.c (main): Use
	regular read() instead of pam_modutil_read() to allow for
	short reads.

2008-12-02  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_timestamp/Makefile.am: Add hmacfile to tests.
	* modules/pam_timestamp/hmacfile.c: Do not try the short key
	testvector.

2008-12-01  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_unix/support.h: Fix masks for cipher algorithm
	flags.

2008-12-01  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_unix/pam_unix.8.xml: Document blowfish option.

	* configure.in: Check for crypt_gensalt_rn.
	* modules/pam_unix/pam_unix_passwd.c: Pass pamh to
	create_password_hash function.
	* modules/pam_unix/passverify.c (create_password_hash): Add
	blowfish support.
	* modules/pam_unix/passverify.h: Adjust create_password_hash
	prototype.
	* modules/pam_unix/support.c: Add support for blowfish option.
	* modules/pam_unix/support.h: Add defines for blowfish option.
	Jozsef Kadlecsik <kadlec@blackhole.kfki.hu>

2008-12-01  Tomas Mraz <t8m@centrum.cz>

	* modules/pam_access/pam_access.8.xml: Fix description of nodefgroup
	option.

	* modules/pam_group/pam_group.c (is_same): Fix check for correct
	string length.

2008-11-29  Thorsten Kukuk  <kukuk@thkukuk.de>

	* configure.in: Check for xcrypt.h, fix typo in libaudit check.
	* modules/pam_cracklib/pam_cracklib.c: Include xcrypt.h if
	available.
	* modules/pam_unix/bigcrypt.c: Likewise.
	* modules/pam_unix/passverify.c: Likewise.
	* modules/pam_userdb/pam_userdb.c: Likewise.